--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
     "framer-motion": "^11.0.3",
+    "human-format": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
